// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form ticket forms validation renders the error messages 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          message
        </h1>
      </header>
      <div
        class="content container ticketFormContainer"
      >
        <div>
          <div
            class="formWrapper"
          >
            <h2
              class="ticketFormTitle "
            >
              Ticket Forms
            </h2>
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-0--input"
                id="garden-text-field-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-invalid="false"
                aria-labelledby="garden-text-field-0--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-0--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-2--input"
                id="garden-text-field-2--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-invalid="true"
                aria-labelledby="garden-text-field-2--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-2--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
              <div
                class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                data-garden-id="textfields.message"
                data-garden-version="3.7.0"
              >
                Please enter a valid email address.
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-4--input"
                  id="garden-text-field-4--label"
                >
                  <strong>
                    Description
                  </strong>
                </label>
                <input
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-4--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-4--input"
                  label="Description"
                  name="1"
                  required=""
                  value=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a value.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-6--input"
                  id="garden-text-field-6--label"
                >
                  <strong>
                    Subject
                  </strong>
                </label>
                <input
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-6--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-6--input"
                  label="Subject"
                  name="2"
                  required=""
                  value=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a value.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-8--input"
                  id="garden-text-field-8--label"
                >
                  <strong>
                    Favorite Burger
                  </strong>
                </label>
                <div
                  class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
                  data-garden-id="textfields.hint"
                  data-garden-version="3.7.0"
                  id="garden-text-field-8--hint"
                >
                  blah blah
                </div>
                <input
                  aria-describedby="garden-text-field-8--hint"
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-8--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-8--input"
                  label="Favorite Burger"
                  name="4"
                  required=""
                  value=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a value.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-10--input"
                  id="garden-text-field-10--label"
                >
                  <strong>
                    Favorite Integer
                  </strong>
                </label>
                <input
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-10--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-10--input"
                  label="Favorite Integer"
                  name="7"
                  pattern="/\\\\d+/"
                  required=""
                  type="number"
                  value=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a number.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-12--input"
                  id="garden-text-field-12--label"
                >
                  <strong>
                    Favorite Decimal
                  </strong>
                </label>
                <input
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-12--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-12--input"
                  label="Favorite Decimal"
                  name="8"
                  pattern="/\\\\d*([.,]\\\\d+)?/"
                  required=""
                  step="any"
                  type="number"
                  value=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a number.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-14--input"
                  id="garden-text-field-14--label"
                >
                  <strong>
                    Favorite Textarea
                  </strong>
                </label>
                <textarea
                  aria-invalid="true"
                  aria-labelledby="garden-text-field-14--label"
                  aria-required="true"
                  class="Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kpjxwv"
                  data-garden-id="textfields.textarea"
                  data-garden-version="3.7.0"
                  id="garden-text-field-14--input"
                  label="Favorite Textarea"
                  name="10"
                  required=""
                />
                <div
                  class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                  data-garden-id="textfields.message"
                  data-garden-version="3.7.0"
                >
                  Please enter a value.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="CheckboxView-sc-3qa538-0 checkbox__c-chk___1E1jK lcTuIg"
                data-garden-id="checkboxes.checkbox_view"
                data-garden-version="3.4.8"
              >
                <input
                  aria-labelledby="garden-checkbox-16--label"
                  aria-required="true"
                  class="Input-sc-7684p1-0 checkbox__c-chk__input___triCm huNnGl"
                  data-garden-id="checkboxes.input"
                  data-garden-version="3.4.8"
                  id="garden-checkbox-16--input"
                  label="Favorite Checkbox"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="Label-sc-1pzn6zn-0 checkbox__c-chk__label___R6mUZ hVpPIr"
                  data-garden-id="checkboxes.label"
                  data-garden-version="3.4.8"
                  for="garden-checkbox-16--input"
                  id="garden-checkbox-16--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="Message-sc-8vyn5o-0 checkbox__c-chk__message___1Ex_9 checkbox__c-chk__message--error___2W0Ms DYITY"
                  data-garden-id="checkboxes.message"
                  data-garden-version="3.4.8"
                >
                  Please check this box to proceed.
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="field"
              >
                <div
                  class="SelectGroup-sc-2edjb9-0 jJsRwa TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                  data-garden-id="select.select_group"
                  data-garden-version="2.5.2"
                >
                  <label
                    class="Label-cui6bx-0 cHXOrh Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                    data-garden-id="select.label"
                    data-garden-version="2.5.2"
                    for="garden-field-container-18--input"
                    id="garden-field-container-18--label"
                  >
                    <strong>
                      Favorite Tagger
                    </strong>
                  </label>
                  <div
                    class="Hint-sc-3w6os0-0 cdjBrT Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
                    data-garden-id="select.hint"
                    data-garden-version="2.5.2"
                    id="garden-field-container-18--hint"
                  />
                  <div
                    aria-haspopup="true"
                    aria-labelledby="garden-field-container-18--label"
                    class="SelectView-gnmjk-0 lcVyfi Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--select___7_VcN text__c-txt__input--error___15FsA hytfkM"
                    data-garden-id="select.select_view"
                    data-garden-version="2.5.2"
                    id="garden-field-container-18--input"
                    role="combobox"
                    tabindex="0"
                  >
                    -
                  </div>
                  <div
                    class="Message-o33ze3-0 exqQAs Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
                    data-garden-id="select.message"
                    data-garden-version="2.5.2"
                  >
                    Please select a value.
                  </div>
                </div>
                <input
                  class="u-isHidden"
                  name="12"
                  required=""
                  value=""
                />
              </div>
            </div>
            <span />
          </div>
        </div>
      </div>
      <footer
        class="footer  footerShadow"
      >
        <div
          class="container buttonRight buttonGroup"
        >
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`renders the expected components 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          message
        </h1>
      </header>
      <div
        class="content container ticketFormContainer"
      >
        <div>
          <div
            class="formWrapper"
          >
            <h2
              class="ticketFormTitle "
            />
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-0--input"
                id="garden-text-field-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-invalid="false"
                aria-labelledby="garden-text-field-0--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-0--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-2--input"
                id="garden-text-field-2--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-invalid="false"
                aria-labelledby="garden-text-field-2--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-2--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <span />
          </div>
        </div>
      </div>
      <footer
        class="footer  "
      >
        <div
          class="container buttonRight buttonGroup"
        >
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`ticket forms renders the extra fields defined in the ticket form 1`] = `
<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          message
        </h1>
      </header>
      <div
        class="content container ticketFormContainer"
      >
        <div>
          <div
            class="formWrapper"
          >
            <h2
              class="ticketFormTitle "
            >
              Ticket Forms
            </h2>
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-0--input"
                id="garden-text-field-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-invalid="false"
                aria-labelledby="garden-text-field-0--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-0--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
              data-garden-id="textfields.text_group"
              data-garden-version="3.7.0"
            >
              <label
                class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
                for="garden-text-field-2--input"
                id="garden-text-field-2--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-invalid="false"
                aria-labelledby="garden-text-field-2--label"
                class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                id="garden-text-field-2--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-4--input"
                  id="garden-text-field-4--label"
                >
                  <strong>
                    Description
                  </strong>
                   (optional)
                </label>
                <input
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-4--label"
                  aria-required="false"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-4--input"
                  label="Description"
                  name="1"
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-6--input"
                  id="garden-text-field-6--label"
                >
                  <strong>
                    Subject
                  </strong>
                   (optional)
                </label>
                <input
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-6--label"
                  aria-required="false"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-6--input"
                  label="Subject"
                  name="2"
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-8--input"
                  id="garden-text-field-8--label"
                >
                  <strong>
                    Favorite Burger
                  </strong>
                   (optional)
                </label>
                <div
                  class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
                  data-garden-id="textfields.hint"
                  data-garden-version="3.7.0"
                  id="garden-text-field-8--hint"
                >
                  blah blah
                </div>
                <input
                  aria-describedby="garden-text-field-8--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-8--label"
                  aria-required="false"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-8--input"
                  label="Favorite Burger"
                  name="4"
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-10--input"
                  id="garden-text-field-10--label"
                >
                  <strong>
                    Favorite Pizza
                  </strong>
                </label>
                <input
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-10--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-10--input"
                  label="Favorite Pizza"
                  name="5"
                  required=""
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-12--input"
                  id="garden-text-field-12--label"
                >
                  <strong>
                    Favorite Integer
                  </strong>
                   (optional)
                </label>
                <div
                  class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
                  data-garden-id="textfields.hint"
                  data-garden-version="3.7.0"
                  id="garden-text-field-12--hint"
                >
                  description number
                </div>
                <input
                  aria-describedby="garden-text-field-12--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-12--label"
                  aria-required="false"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-12--input"
                  label="Favorite Integer"
                  name="7"
                  pattern="/\\\\d+/"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-14--input"
                  id="garden-text-field-14--label"
                >
                  <strong>
                    Favorite Decimal
                  </strong>
                </label>
                <input
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-14--label"
                  aria-required="true"
                  class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  id="garden-text-field-14--input"
                  label="Favorite Decimal"
                  name="8"
                  pattern="/\\\\d*([.,]\\\\d+)?/"
                  required=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-16--input"
                  id="garden-text-field-16--label"
                >
                  <strong>
                    Favorite Description
                  </strong>
                </label>
                <textarea
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-16--label"
                  aria-required="true"
                  class="Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
                  data-garden-id="textfields.textarea"
                  data-garden-version="3.7.0"
                  id="garden-text-field-16--input"
                  label="Favorite Description"
                  name="9"
                  required=""
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-18--input"
                  id="garden-text-field-18--label"
                >
                  <strong>
                    Favorite Textarea
                  </strong>
                   (optional)
                </label>
                <textarea
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-18--label"
                  aria-required="false"
                  class="Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
                  data-garden-id="textfields.textarea"
                  data-garden-version="3.7.0"
                  id="garden-text-field-18--input"
                  label="Favorite Textarea"
                  name="10"
                />
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="CheckboxView-sc-3qa538-0 checkbox__c-chk___1E1jK lcTuIg"
                data-garden-id="checkboxes.checkbox_view"
                data-garden-version="3.4.8"
              >
                <input
                  aria-describedby="garden-checkbox-20--hint"
                  aria-labelledby="garden-checkbox-20--label"
                  aria-required="true"
                  class="Input-sc-7684p1-0 checkbox__c-chk__input___triCm huNnGl"
                  data-garden-id="checkboxes.input"
                  data-garden-version="3.4.8"
                  id="garden-checkbox-20--input"
                  label="Favorite Checkbox"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="Label-sc-1pzn6zn-0 checkbox__c-chk__label___R6mUZ hVpPIr"
                  data-garden-id="checkboxes.label"
                  data-garden-version="3.4.8"
                  for="garden-checkbox-20--input"
                  id="garden-checkbox-20--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="Hint-sc-1wv4eaq-0 checkbox__c-chk__hint___1MTmz iWfXKT"
                  data-garden-id="checkboxes.hint"
                  data-garden-version="3.4.8"
                  id="garden-checkbox-20--hint"
                >
                  this is the description
                </div>
              </div>
            </div>
            <div
              class=""
              style="opacity: 1; bottom: 10px;"
            >
              <div
                class="field"
              >
                <div
                  class="SelectGroup-sc-2edjb9-0 jJsRwa TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                  data-garden-id="select.select_group"
                  data-garden-version="2.5.2"
                >
                  <label
                    class="Label-cui6bx-0 cHXOrh Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                    data-garden-id="select.label"
                    data-garden-version="2.5.2"
                    for="garden-field-container-22--input"
                    id="garden-field-container-22--label"
                  >
                    <strong>
                      Favorite Tagger
                    </strong>
                  </label>
                  <div
                    class="Hint-sc-3w6os0-0 cdjBrT Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
                    data-garden-id="select.hint"
                    data-garden-version="2.5.2"
                    id="garden-field-container-22--hint"
                  >
                    this is the tagger description
                  </div>
                  <div
                    aria-haspopup="true"
                    aria-labelledby="garden-field-container-22--label"
                    class="SelectView-gnmjk-0 lcVyfi Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--select___7_VcN hytfkM"
                    data-garden-id="select.select_view"
                    data-garden-version="2.5.2"
                    id="garden-field-container-22--input"
                    role="combobox"
                    tabindex="0"
                  >
                    two
                  </div>
                </div>
                <input
                  class="u-isHidden"
                  name="12"
                  required=""
                  value="2"
                />
              </div>
            </div>
            <span />
          </div>
        </div>
      </div>
      <footer
        class="footer  footerShadow"
      >
        <div
          class="container buttonRight buttonGroup"
        >
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
            data-garden-id="buttons.button"
            data-garden-version="3.7.0"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;
